[gd_scene load_steps=4 format=2]

[ext_resource path="res://ExampleScenes/Chapter_02_Forces/Mover_Chapter_2.tscn" type="PackedScene" id=1]
[ext_resource path="res://ExampleScenes/Chapter_02_Forces/Exercise_2_4_Friction_Pockets.gd" type="Script" id=2]



[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100, 200 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Movers" type="Node2D" parent="."]

[node name="Mover" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover2" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover3" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover4" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover5" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover6" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover7" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover8" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover9" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover10" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover11" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover12" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover13" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover14" parent="Movers" instance=ExtResource( 1 )]

[node name="Mover15" parent="Movers" instance=ExtResource( 1 )]

[node name="FrictionArea" type="Area2D" parent="."]
position = Vector2( 288.696, 425.642 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FrictionArea"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="FrictionArea"]
anchor_bottom = 0.86
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = 200.0
color = Color( 1, 0, 0, 0.145098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomArea" type="Area2D" parent="."]
position = Vector2( 708.787, 425.642 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoomArea"]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="ZoomArea"]
anchor_bottom = 0.86
margin_left = -100.0
margin_top = -200.0
margin_right = 100.0
margin_bottom = 200.0
color = Color( 0, 0.694118, 1, 0.145098 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="area_entered" from="FrictionArea" to="." method="_on_FrictionArea_area_entered"]
[connection signal="area_exited" from="FrictionArea" to="." method="_on_FrictionArea_area_exited"]
[connection signal="area_entered" from="ZoomArea" to="." method="_on_ZoomArea_area_entered"]
[connection signal="area_exited" from="ZoomArea" to="." method="_on_ZoomArea_area_exited"]
